--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "pandas-ta (>=0.3.14b,<0.4.0)",
     "setuptools (>=80.9.0,<81.0.0)",
     "finta (>=1.3,<2.0)",
-    "langgraph (>=0.5.1,<0.6.0)"
+    "langgraph (>=0.5.1,<0.6.0)",
+    "python-dotenv (>=1.1.1,<2.0.0)"
 ]
 
 
