--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,9 @@ dependencies = [
     "setuptools (>=80.9.0,<81.0.0)",
     "finta (>=1.3,<2.0)",
     "langgraph (>=0.5.1,<0.6.0)",
-    "python-dotenv (>=1.1.1,<2.0.0)"
+    "python-dotenv (>=1.1.1,<2.0.0)",
+    "langchain-google-genai (>=2.1.7,<3.0.0)",
+    "google-genai (>=1.25.0,<2.0.0)"
 ]
 
 
