--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,8 @@ dependencies = [
     "langgraph (>=0.5.1,<0.6.0)",
     "python-dotenv (>=1.1.1,<2.0.0)",
     "langchain-google-genai (>=2.1.7,<3.0.0)",
-    "google-genai (>=1.25.0,<2.0.0)"
+    "google-genai (>=1.25.0,<2.0.0)",
+    "pytest (>=8.4.1,<9.0.0)"
 ]
 
 
